Exercices Algorithmique - Correction Pt. 1 & 2

--- a/Cours.ipynb
+++ b/Cours.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -214,8 +214,8 @@
     "l = [1, 2, 3, 4]\n",
     "somme = 0\n",
     "\n",
-    "for i in l:\n",
-    "    somme += l[i-1]\n",
+    "for i in range(len(l)):\n",
+    "    somme += l[i]\n",
     "    \n",
     "print(somme)"
    ]
@@ -229,24 +229,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 8, 10, 12]\n"
+      "[6, 10, 9, 11]\n"
      ]
     }
    ],
    "source": [
-    "l1 = [1, 2, 3, 4]\n",
+    "l1 = [1, 4, 2, 3]\n",
     "l2 = [5, 6, 7, 8]\n",
     "somme = []\n",
     "\n",
-    "for i in l1:\n",
-    "    somme.append(l1[i-1] + l2[i-1])\n",
+    "for i in range(len(l1)):\n",
+    "    somme.append(l1[i] + l2[i])\n",
     "    \n",
     "print(somme)"
    ]
@@ -260,27 +260,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fac_product(list1: list, list2: list) -> float:\n",
+    "    somme = 0\n",
+    "\n",
+    "    for i in range(len(l1)):\n",
+    "        somme += list1[i] * list2[i]\n",
+    "\n",
+    "    return somme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "260\n"
+      "262\n"
      ]
     }
    ],
    "source": [
-    "l1 = [1, 2, 3, 4]\n",
-    "l2 = [5, 6, 7, 8]\n",
-    "somme = 0\n",
-    "\n",
-    "for i in range(0, len(l1)):\n",
-    "    for j in range(0, len(l2)):\n",
-    "        somme += l1[i-1] * l2[j-1]\n",
-    "        \n",
-    "print(somme)"
+    "print(fac_product([2, 12, 7, 3], [4, 11, 14, 8]))"
    ]
   },
   {
@@ -292,33 +299,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def biggest(numbers: list) -> float:\n",
+    "\n",
+    "    try:\n",
+    "        result = numbers[0]\n",
+    "    except:\n",
+    "        return None\n",
+    "        \n",
+    "    for i in numbers:\n",
+    "        if i > result:\n",
+    "            result = i\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saisissez le premier nombre : 1\n",
-      "Saisissez le deuxième nombre : 5\n",
-      "Saisissez le dernier nombre : 10\n",
-      "Le plus grand nombre est : 10\n"
+      "9\n"
      ]
     }
    ],
    "source": [
-    "a = int(input(\"Saisissez le premier nombre : \"))\n",
-    "b = int(input(\"Saisissez le deuxième nombre : \"))\n",
-    "c = int(input(\"Saisissez le dernier nombre : \"))\n",
-    "l = [a, b, c]\n",
-    "result = a\n",
-    "\n",
-    "for i in l:\n",
-    "    if i > result:\n",
-    "        result = i\n",
-    "        \n",
-    "print(\"Le plus grand nombre est : \" + str(result))"
+    "print(str(biggest([4, 7, 1, 3, 6, 9, 0])))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
