--- a/Cours.ipynb
+++ b/Cours.ipynb
@@ -335,11 +335,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Maths"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1. Le temps d'arrêt"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def function(alpha: float) -> int:\n",
+    "    h, k, n = 0, 1, 0\n",
+    "    while h < alpha:\n",
+    "        h, k, n = h+(1/k), k+1, n+1\n",
+    "\n",
+    "    return n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1674\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(function(8))"
+   ]
   }
  ],
  "metadata": {
