Numpy exercices pratiques - Q10 à Q20

--- a/numpy_exo.ipynb
+++ b/numpy_exo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,24 +264,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 1, 2],\n",
-       "       [3, 4, 5],\n",
-       "       [6, 7, 8]])"
+       "array([[2, 7, 7],\n",
+       "       [5, 4, 6],\n",
+       "       [1, 2, 5]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.arange(0, 9).reshape(3, 3)"
+    "np.random.randint(low = 8, size = (3, 3)) "
    ]
   },
   {
@@ -322,32 +322,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 0,  1,  2],\n",
-       "        [ 3,  4,  5],\n",
-       "        [ 6,  7,  8]],\n",
+       "array([[[70, 21, 61],\n",
+       "        [19, 74, 73],\n",
+       "        [80, 12, 15]],\n",
        "\n",
-       "       [[ 9, 10, 11],\n",
-       "        [12, 13, 14],\n",
-       "        [15, 16, 17]],\n",
+       "       [[42, 61, 18],\n",
+       "        [ 5, 89, 12],\n",
+       "        [98, 49, 28]],\n",
        "\n",
-       "       [[18, 19, 20],\n",
-       "        [21, 22, 23],\n",
-       "        [24, 25, 26]]])"
+       "       [[52, 75, 16],\n",
+       "        [57, 38, 36],\n",
+       "        [85, 97,  3]]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.arange(0, 27).reshape(3, 3, 3)"
+    "np.random.randint(low = 100, size = (3, 3, 3))"
    ]
   },
   {
@@ -359,10 +359,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[92 62 54 22  7 33 47  8 44 39]\n",
+      " [68 54 13  9 34 56 56  5 89 66]\n",
+      " [79 68 51 44 57 21 78  7 15 18]\n",
+      " [31  0  5 35 83 81 18 77 41  2]\n",
+      " [35 48 74 38 40 63 74  7 97 40]\n",
+      " [26 75 42 19 74 91 74 26 14 36]\n",
+      " [32 34 73 62 30 66 21 34 45 90]\n",
+      " [39 83  0  2 85 57  4 34 39 38]\n",
+      " [38  8 55 90 18 33 40  4 39 48]\n",
+      " [ 0 41 53 48 60 81 66 94 60 71]]\n",
+      "0\n",
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.random.randint(low = 100, size = (10, 10)) \n",
+    "print(m)\n",
+    "print(np.min(m))\n",
+    "print(np.max(m))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,10 +397,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[51 99 44 85 60]\n",
+      " [ 1 78 29  2 92]\n",
+      " [50  2 66 31 31]\n",
+      " [ 6 12  3 61 85]\n",
+      " [ 8 52 86  4 66]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.random.randint(low = 100, size = (5, 5))\n",
+    "for i in range(1, len(m)):\n",
+    "    m[i][i-1] = i\n",
+    "print(m)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -387,10 +428,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[21 20 30 50 56]\n",
+      " [17 71 41 66 23]\n",
+      " [69 81 56 15 94]\n",
+      " [93 10 77 10 91]\n",
+      " [ 9 95 22 95 32]]\n",
+      "\n",
+      "1244\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.random.randint(low = 100, size = (5, 5))\n",
+    "print(m)\n",
+    "print()\n",
+    "print(m.sum())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -401,10 +461,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[98 31 48 47  8]\n",
+      " [ 6 97 17 26 94]\n",
+      " [59 60 23 11 98]\n",
+      " [79 23  2 75 16]\n",
+      " [12 57 15 96 11]]\n",
+      "\n",
+      "44.36\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.random.randint(low = 100, size = (5, 5))\n",
+    "print(m)\n",
+    "print()\n",
+    "print(m.mean())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -418,10 +497,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [x for x in range(11)]\n",
+    "len(l)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -432,10 +525,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.63055262],\n",
+       "       [0.56028671],\n",
+       "       [0.31741806],\n",
+       "       [0.9320221 ],\n",
+       "       [0.56720687],\n",
+       "       [0.530731  ],\n",
+       "       [0.13313458],\n",
+       "       [0.92706904],\n",
+       "       [0.46421381],\n",
+       "       [0.56721906]])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random((10, 1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -446,10 +561,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [1]]\n",
+      "\n",
+      "[[0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]]\n",
+      "\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(low = 2, size = (5, 1))\n",
+    "b = np.random.randint(low = 2, size = (5, 1))\n",
+    "print(a)\n",
+    "print()\n",
+    "print(b)\n",
+    "print()\n",
+    "print(True if np.array_equal(a, b) else False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -460,10 +603,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8.28682007]\n",
+      " [6.69485813]\n",
+      " [5.91226577]\n",
+      " [7.8855279 ]\n",
+      " [4.3000925 ]\n",
+      " [9.13006287]\n",
+      " [8.02144274]\n",
+      " [5.09597762]\n",
+      " [8.09628888]\n",
+      " [2.04141495]]\n",
+      "\n",
+      "[[8]\n",
+      " [6]\n",
+      " [5]\n",
+      " [7]\n",
+      " [4]\n",
+      " [9]\n",
+      " [8]\n",
+      " [5]\n",
+      " [8]\n",
+      " [2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.random.uniform(low = 0.0, high = 10.0, size=(10, 1))\n",
+    "print(m)\n",
+    "print()\n",
+    "print(m.astype(int))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -475,10 +651,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[86 44 32 16  7]\n",
+      " [60 90 51 39 36]\n",
+      " [80 97 75 94 56]\n",
+      " [25 17 15 20 65]\n",
+      " [93 91 56 56 22]]\n",
+      "\n",
+      "[[0.46486486 0.23783784 0.17297297 0.08648649 0.03783784]\n",
+      " [0.2173913  0.32608696 0.18478261 0.14130435 0.13043478]\n",
+      " [0.19900498 0.24129353 0.18656716 0.23383085 0.13930348]\n",
+      " [0.17605634 0.11971831 0.1056338  0.14084507 0.45774648]\n",
+      " [0.29245283 0.28616352 0.17610063 0.17610063 0.06918239]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.random.randint(low = 100, size = (5, 5))\n",
+    "print(m)\n",
+    "row_sums = m.sum(axis = 1)\n",
+    "new_matrix = m / row_sums[:, np.newaxis]\n",
+    "print()\n",
+    "print(new_matrix)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -490,10 +691,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[15 13 75 30 59]\n",
+      " [57 69 15 38 66]\n",
+      " [92 19 82 49 66]\n",
+      " [83 15  0 75 68]\n",
+      " [74 40 34 13 27]]\n",
+      "\n",
+      "[[15 57 92 83 74]\n",
+      " [13 69 19 15 40]\n",
+      " [75 15 82  0 34]\n",
+      " [30 38 49 75 13]\n",
+      " [59 66 66 68 27]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.random.randint(low = 100, size = (5, 5))\n",
+    "print(m)\n",
+    "print()\n",
+    "print(m.T)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -504,10 +728,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[47 82 47  8 37]\n",
+      " [34 47 39 26 32]\n",
+      " [57  7 88 73 54]\n",
+      " [ 8 12 63 97 19]\n",
+      " [72 53 37 66  6]]\n",
+      "\n",
+      "[[47 82 47  8 37]\n",
+      " [34 47 39 26 32]\n",
+      " [57  7 88 73 54]\n",
+      " [ 8 12 63 97 97]\n",
+      " [72 53 37 66  6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines, columns = 5, 5\n",
+    "m = np.random.randint(low = 100, size = (lines, columns))\n",
+    "print(m)\n",
+    "m[np.random.randint(lines)][np.random.randint(columns)] = np.random.randint(100)\n",
+    "print()\n",
+    "print(m)"
+   ]
   },
   {
    "cell_type": "markdown",
