Exercices Pandas du 23/09/2020 (après-midi))

--- a/23-09-2020/Introduction.ipynb
+++ b/23-09-2020/Introduction.ipynb
@@ -10,11 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -121,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercice 1"
+    "## Exercice 1"
    ]
   },
   {
@@ -145,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercice 2"
+    "## Exercice 2"
    ]
   },
   {
@@ -261,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercice 3"
+    "## Exercice 3"
    ]
   },
   {
@@ -428,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercice 4"
+    "## Exercice 4"
    ]
   },
   {
@@ -535,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercice 5"
+    "## Exercice 5"
    ]
   },
   {
@@ -1157,7 +1158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercice 6"
+    "## Exercice 6"
    ]
   },
   {
@@ -1423,11 +1424,255 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercice 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chemin = 'https://bit.ly/bitcoin-purchases2'\n",
+    "data = pd.read_csv(chemin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bitcoin address</th>\n",
+       "      <th>wire amount</th>\n",
+       "      <th>credit card</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1J9DVMtgvnPv4KGHL2XSzoTSt5cBBL1DXe</td>\n",
+       "      <td>£8356.92</td>\n",
+       "      <td>3543456448666398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1HaiVQbzCTs7t1K1fckYEUi9t8ERBFRR7Q</td>\n",
+       "      <td>€311,06</td>\n",
+       "      <td>3584615208479876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1NGPjXfDScEUSZYajAzCkxaVApTbBHC7jP</td>\n",
+       "      <td>€2032,44</td>\n",
+       "      <td>6370577480710876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15cSYRTbcrxYinxNxk7VbkPLZG8nypdjy6</td>\n",
+       "      <td>¥8155.74</td>\n",
+       "      <td>4508652385157398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18j2qG1DH9YduJiBiccAq8Ak897G3E4JyZ</td>\n",
+       "      <td>£3265.44</td>\n",
+       "      <td>374622922103592</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      bitcoin address wire amount       credit card\n",
+       "0  1J9DVMtgvnPv4KGHL2XSzoTSt5cBBL1DXe    £8356.92  3543456448666398\n",
+       "1  1HaiVQbzCTs7t1K1fckYEUi9t8ERBFRR7Q     €311,06  3584615208479876\n",
+       "2  1NGPjXfDScEUSZYajAzCkxaVApTbBHC7jP    €2032,44  6370577480710876\n",
+       "3  15cSYRTbcrxYinxNxk7VbkPLZG8nypdjy6    ¥8155.74  4508652385157398\n",
+       "4  18j2qG1DH9YduJiBiccAq8Ak897G3E4JyZ    £3265.44   374622922103592"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['wire amount'] = data['wire amount'].str.replace(',', '.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['devise'] = data['wire amount'].str[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['wire amount'] = data['wire amount'].str[1:]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data['wire amount'] = data['wire amount'].astype('float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bitcoin address</th>\n",
+       "      <th>wire amount</th>\n",
+       "      <th>credit card</th>\n",
+       "      <th>devise</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1J9DVMtgvnPv4KGHL2XSzoTSt5cBBL1DXe</td>\n",
+       "      <td>8356.92</td>\n",
+       "      <td>3543456448666398</td>\n",
+       "      <td>£</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1HaiVQbzCTs7t1K1fckYEUi9t8ERBFRR7Q</td>\n",
+       "      <td>311.06</td>\n",
+       "      <td>3584615208479876</td>\n",
+       "      <td>€</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1NGPjXfDScEUSZYajAzCkxaVApTbBHC7jP</td>\n",
+       "      <td>2032.44</td>\n",
+       "      <td>6370577480710876</td>\n",
+       "      <td>€</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15cSYRTbcrxYinxNxk7VbkPLZG8nypdjy6</td>\n",
+       "      <td>8155.74</td>\n",
+       "      <td>4508652385157398</td>\n",
+       "      <td>¥</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18j2qG1DH9YduJiBiccAq8Ak897G3E4JyZ</td>\n",
+       "      <td>3265.44</td>\n",
+       "      <td>374622922103592</td>\n",
+       "      <td>£</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      bitcoin address  wire amount       credit card devise\n",
+       "0  1J9DVMtgvnPv4KGHL2XSzoTSt5cBBL1DXe      8356.92  3543456448666398      £\n",
+       "1  1HaiVQbzCTs7t1K1fckYEUi9t8ERBFRR7Q       311.06  3584615208479876      €\n",
+       "2  1NGPjXfDScEUSZYajAzCkxaVApTbBHC7jP      2032.44  6370577480710876      €\n",
+       "3  15cSYRTbcrxYinxNxk7VbkPLZG8nypdjy6      8155.74  4508652385157398      ¥\n",
+       "4  18j2qG1DH9YduJiBiccAq8Ak897G3E4JyZ      3265.44   374622922103592      £"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bitcoin address     object\n",
+       "wire amount        float64\n",
+       "credit card          int64\n",
+       "devise              object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
+   ]
   }
  ],
  "metadata": {
