Cours du 24/09/2020 (après-midi) + Vintage Auctions v2

--- a/pandas/vintage-auctions.ipynb
+++ b/pandas/vintage-auctions.ipynb
@@ -9,10 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "fp = 'https://bit.ly/vintage-auctions'\n",
     "df = pd.read_csv(fp)"
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
        "4        2XL        used  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +178,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +301,7 @@
        "4        2XL        used  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +424,7 @@
        "4        2XL        used        $  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +547,7 @@
        "4        2XL        used        $  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +575,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,10 +593,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.time = pd.to_datetime(df.time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tx id</th>\n",
+       "      <th>time</th>\n",
+       "      <th>auction</th>\n",
+       "      <th>color</th>\n",
+       "      <th>shirt size</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>currency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8dbf3cfa48b25f32e300f279bb4163c67d5c60cd</td>\n",
+       "      <td>2020-09-24 15:36:00</td>\n",
+       "      <td>17.18</td>\n",
+       "      <td>Puce</td>\n",
+       "      <td>S</td>\n",
+       "      <td>used</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8ccebfdb1a41830bdcc0e926531f3215986b3a90</td>\n",
+       "      <td>2020-09-24 09:03:00</td>\n",
+       "      <td>15.19</td>\n",
+       "      <td>Aquamarine</td>\n",
+       "      <td>L</td>\n",
+       "      <td>never worn</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ae85a421a91cec8baf16ff1e45fb3e239130b584</td>\n",
+       "      <td>2020-09-24 19:42:00</td>\n",
+       "      <td>7.58</td>\n",
+       "      <td>Violet</td>\n",
+       "      <td>L</td>\n",
+       "      <td>used</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>85e44f09a04a79182befcfd55e288a855f633e81</td>\n",
+       "      <td>2020-09-24 22:28:00</td>\n",
+       "      <td>9.10</td>\n",
+       "      <td>Goldenrod</td>\n",
+       "      <td>XS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ff750bfca4910cfa7f538fbe5463457839021680</td>\n",
+       "      <td>2020-09-24 06:38:00</td>\n",
+       "      <td>8.22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2XL</td>\n",
+       "      <td>used</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      tx id                time  auction  \\\n",
+       "0  8dbf3cfa48b25f32e300f279bb4163c67d5c60cd 2020-09-24 15:36:00    17.18   \n",
+       "1  8ccebfdb1a41830bdcc0e926531f3215986b3a90 2020-09-24 09:03:00    15.19   \n",
+       "2  ae85a421a91cec8baf16ff1e45fb3e239130b584 2020-09-24 19:42:00     7.58   \n",
+       "3  85e44f09a04a79182befcfd55e288a855f633e81 2020-09-24 22:28:00     9.10   \n",
+       "4  ff750bfca4910cfa7f538fbe5463457839021680 2020-09-24 06:38:00     8.22   \n",
+       "\n",
+       "        color shirt size   condition currency  \n",
+       "0        Puce          S        used        $  \n",
+       "1  Aquamarine          L  never worn        $  \n",
+       "2      Violet          L        used        $  \n",
+       "3   Goldenrod         XS         NaN        $  \n",
+       "4         NaN        2XL        used        $  "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tx id                 object\n",
+       "time          datetime64[ns]\n",
+       "auction              float64\n",
+       "color                 object\n",
+       "shirt size            object\n",
+       "condition             object\n",
+       "currency              object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
   }
  ],
  "metadata": {
