--- a/Pipeline/Pipeline.ipynb
+++ b/Pipeline/Pipeline.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
     "    data = None\n",
     "    variable_types = None\n",
     "    dropped_columns = []\n",
-    "    \n",
+    "    thresholded_columns = []\n",
     "    \n",
     "    def __init__(self, data):\n",
     "        self.data = data\n",
@@ -395,17 +395,43 @@
     "        \n",
     "        \n",
     "    def deal_duplicate(self):\n",
-    "        \"\"\" TODO : Supprimer les lignes dupliquées du dataset \"\"\"\n",
+    "        \"\"\" TODO : Supprimer les colonnes dupliquées en parcourant les lignes du dataset \"\"\"\n",
     "        print('[3/5] TODO ')\n",
-    "        pass\n",
+    "        \n",
+    "        ### DEBUG ###\n",
+    "        cols1 = self.data.columns\n",
+    "        cols2 = self.data.columns\n",
+    "        duplicated_cols = []\n",
+    "        is_diff = false\n",
+    "        for col1 in cols1:\n",
+    "            cols2.remove(col1)\n",
+    "            for i in range(0, self.data.shape[1]):\n",
+    "                if (len(cols2) > 0) and (col1[i] != cols2[0][i]):\n",
+    "                    is_diff = true\n",
+    "                    break\n",
+    "            if not is_diff:\n",
+    "                duplicated_cols.append(col1)\n",
+    "        print(\"DEBUG\")\n",
     "    \n",
     "    \n",
-    "    def drop_nanp(self, threshold: float):\n",
-    "        \"\"\" TODO : Supprimer les colonnes ayant un certain pourcentage de NA dans le dataset \"\"\"\n",
-    "        print('[4/5] TODO ')\n",
-    "        pass\n",
-    "    \n",
-    "    \n",
+    "    def drop_nanp(self, thresold: float):\n",
+    "        \"\"\" \n",
+    "        Drop NaN columns according to a thresold \n",
+    "        \n",
+    "        @params:\n",
+    "            - thresold: value between 0 included and 1 excluded\n",
+    "        \"\"\"\n",
+    "        print(\"[4/5] Dropping NaN columns according to the specified thresold (\" + str(thresold) + \")... \", end='')\n",
+    "        \n",
+    "        for column in self.data.columns:\n",
+    "            if (self.data[column].isna().sum() / self.data.shape[0]) > thresold:\n",
+    "                self.thresholded_columns.append(column)\n",
+    "                \n",
+    "        self.data.drop(columns=self.thresholded_columns, inplace=True)\n",
+    "        \n",
+    "        print(\"Done.\")\n",
+    "        \n",
+    "        \n",
     "    def deal_dtime(self):\n",
     "        \"\"\" TODO : Traiter les DateTime \"\"\"\n",
     "        print('[5/5] TODO ')\n",
@@ -425,13 +451,16 @@
     "        for vtype in self.variable_types.keys():\n",
     "            print(\"- \" + str(vtype) + \" : \" + str(self.variable_types[vtype]))\n",
     "        print()\n",
-    "        print(\"Dropped columns : \" + str(self.dropped_columns))\n",
-    "        print()\n"
+    "        print(\"Dropped columns (\" + str(len(self.dropped_columns)) + \" column(s)) : \" + str(self.dropped_columns))\n",
+    "        print()\n",
+    "        print(\"Dropped columns by thresold (\" + str(len(self.thresholded_columns)) + \" column(s) for a thresold of \" + str(threshold) + \") : \" + str(self.thresholded_columns))\n",
+    "        print()\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -441,24 +470,26 @@
       "===| FeatureRecipe |===\n",
       "[1/5] Separate variable types... Done.\n",
       "[2/5] Dropping useless features... Done.\n",
-      "[3/5] TODO \n",
-      "[4/5] TODO \n",
-      "[5/5] TODO \n",
-      "\n",
-      "Variable types :\n",
-      "- discreet : ['Unnamed: 0', 'listing_id', 'person_capacity', 'beds', 'bedrooms']\n",
-      "- continues : ['latitude', 'longitude', 'bathrooms', 'pricing_weekly_factor', 'pricing_monthly_factor', 'local_price']\n",
-      "- boolean : ['is_rebookable', 'is_new_listing', 'is_fully_refundable', 'is_host_highly_rated', 'is_business_travel_ready']\n",
-      "- categorical : ['name', 'type', 'city', 'neighborhood']\n",
-      "\n",
-      "Dropped columns : ['Unnamed: 0']\n",
-      "\n"
+      "[3/5] TODO \n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'false' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-18ed45821d4b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfeature_recipe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mFeatureRecipe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mfeature_recipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprepare_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.05\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-13-d3145af259a6>\u001b[0m in \u001b[0;36mprepare_data\u001b[1;34m(self, threshold)\u001b[0m\n\u001b[0;32m     94\u001b[0m         \u001b[0mfeature_recipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mseparate_variable_types\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m         \u001b[0mfeature_recipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop_uselessf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 96\u001b[1;33m         \u001b[0mfeature_recipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeal_duplicate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     97\u001b[0m         \u001b[0mfeature_recipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop_nanp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mthreshold\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     98\u001b[0m         \u001b[0mfeature_recipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeal_dtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-13-d3145af259a6>\u001b[0m in \u001b[0;36mdeal_duplicate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     53\u001b[0m         \u001b[0mduplicated_cols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 54\u001b[1;33m         \u001b[0mis_diff\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     55\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mcol1\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcols1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m             \u001b[0mcols2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcol1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'false' is not defined"
      ]
     }
    ],
    "source": [
     "feature_recipe = FeatureRecipe(df)\n",
-    "feature_recipe.prepare_data(5)"
+    "feature_recipe.prepare_data(0.05)"
    ]
   },
   {
@@ -491,7 +522,6 @@
        "      <th>name</th>\n",
        "      <th>type</th>\n",
        "      <th>city</th>\n",
-       "      <th>neighborhood</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>person_capacity</th>\n",
@@ -515,7 +545,6 @@
        "      <td>La maison Clery</td>\n",
        "      <td>private_room</td>\n",
        "      <td>Paris</td>\n",
-       "      <td>2e arrondissement</td>\n",
        "      <td>48.869292</td>\n",
        "      <td>2.348335</td>\n",
        "      <td>1</td>\n",
@@ -537,7 +566,6 @@
        "      <td>studio PARIS PLACE EDITH PIAF 75020</td>\n",
        "      <td>entire_home</td>\n",
        "      <td>Paris</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>48.867284</td>\n",
        "      <td>2.403255</td>\n",
        "      <td>2</td>\n",
@@ -559,7 +587,6 @@
        "      <td>chambre privée à louer @ paris oberkampf</td>\n",
        "      <td>private_room</td>\n",
        "      <td>Paris</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>48.867894</td>\n",
        "      <td>2.375897</td>\n",
        "      <td>1</td>\n",
@@ -581,7 +608,6 @@
        "      <td>Appartement au coeur du Marais</td>\n",
        "      <td>entire_home</td>\n",
        "      <td>Paris</td>\n",
-       "      <td>République</td>\n",
        "      <td>48.870370</td>\n",
        "      <td>2.358510</td>\n",
        "      <td>3</td>\n",
@@ -603,7 +629,6 @@
        "      <td>Lovely &amp; Quiet flat</td>\n",
        "      <td>entire_home</td>\n",
        "      <td>Paris</td>\n",
-       "      <td>Buttes-Chaumont - Belleville</td>\n",
        "      <td>48.874149</td>\n",
        "      <td>2.373700</td>\n",
        "      <td>2</td>\n",
@@ -631,33 +656,33 @@
        "3     1318834            Appartement au coeur du Marais   entire_home  Paris   \n",
        "4     1677091                       Lovely & Quiet flat   entire_home  Paris   \n",
        "\n",
-       "                   neighborhood   latitude  longitude  person_capacity  beds  \\\n",
-       "0             2e arrondissement  48.869292   2.348335                1     1   \n",
-       "1                           NaN  48.867284   2.403255                2     1   \n",
-       "2                           NaN  48.867894   2.375897                1     1   \n",
-       "3                    République  48.870370   2.358510                3     2   \n",
-       "4  Buttes-Chaumont - Belleville  48.874149   2.373700                2     1   \n",
+       "    latitude  longitude  person_capacity  beds  bedrooms  bathrooms  \\\n",
+       "0  48.869292   2.348335                1     1         1        2.0   \n",
+       "1  48.867284   2.403255                2     1         1        1.0   \n",
+       "2  48.867894   2.375897                1     1         1        1.0   \n",
+       "3  48.870370   2.358510                3     2         2        1.0   \n",
+       "4  48.874149   2.373700                2     1         1        1.0   \n",
        "\n",
-       "   bedrooms  bathrooms  is_rebookable  is_new_listing  is_fully_refundable  \\\n",
-       "0         1        2.0          False            True                 True   \n",
-       "1         1        1.0          False           False                 True   \n",
-       "2         1        1.0          False           False                 True   \n",
-       "3         2        1.0          False           False                 True   \n",
-       "4         1        1.0          False           False                 True   \n",
+       "   is_rebookable  is_new_listing  is_fully_refundable  is_host_highly_rated  \\\n",
+       "0          False            True                 True                 False   \n",
+       "1          False           False                 True                  True   \n",
+       "2          False           False                 True                  True   \n",
+       "3          False           False                 True                 False   \n",
+       "4          False           False                 True                  True   \n",
        "\n",
-       "   is_host_highly_rated  is_business_travel_ready  pricing_weekly_factor  \\\n",
-       "0                 False                     False                   1.00   \n",
-       "1                  True                     False                   0.88   \n",
-       "2                  True                     False                   1.00   \n",
-       "3                 False                     False                   0.82   \n",
-       "4                  True                     False                   0.95   \n",
+       "   is_business_travel_ready  pricing_weekly_factor  pricing_monthly_factor  \\\n",
+       "0                     False                   1.00                    1.00   \n",
+       "1                     False                   0.88                    0.69   \n",
+       "2                     False                   1.00                    1.00   \n",
+       "3                     False                   0.82                    0.48   \n",
+       "4                     False                   0.95                    0.90   \n",
        "\n",
-       "   pricing_monthly_factor  local_price  \n",
-       "0                    1.00    45.948454  \n",
-       "1                    0.69    44.473684  \n",
-       "2                    1.00    49.000000  \n",
-       "3                    0.48   165.000000  \n",
-       "4                    0.90    69.774436  "
+       "   local_price  \n",
+       "0    45.948454  \n",
+       "1    44.473684  \n",
+       "2    49.000000  \n",
+       "3   165.000000  \n",
+       "4    69.774436  "
       ]
      },
      "execution_count": 9,
@@ -677,7 +702,7 @@
     {
      "data": {
       "text/plain": [
-       "(999, 19)"
+       "(999, 18)"
       ]
      },
      "execution_count": 10,
